Fix responsive design on mobile devices to align content properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,9 +96,10 @@ footer {
   gap: 20px;
 }
 
-.header > :nth-child(1) {
+.header > .title {
   align-self: flex-start;
 }
+
 .nav-links {
   display: flex;
   justify-content: flex-end;
@@ -128,8 +129,8 @@ footer {
 }
 
 .hero img {
-  /* width: clamp(150px, 40%, 500px); */
-  width: max(340px, 50%);
+  width: clamp(150px, 40%, 500px);
+  /* width: max(720px, 50%); */
 }
 
 .cards {
@@ -141,11 +142,38 @@ footer {
   width: 400px;
 }
 
+@media screen and (max-width: 1200px) {
+  .hero {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 768px) {
+  .wrapper h2 {
+    text-align: center;
+  }
+
+  .header {
+    flex-direction: column;
+    margin-right: 0;
+    gap: 0;
+
+    & .title {
+      align-self: center;
+    }
+  }
+
+  .nav-links {
+    justify-content: space-between;
+    gap: 10px;
+    margin-right: 0;
+  }
+
   .cards {
     flex-direction: column;
     align-items: center;
   }
+
   .card {
     width: 100%;
   }
